@@ -1,3 +1,8 @@
+2008-05-23  Martin Leidig  <mleidig@schlund.de>
+
+	* src/de/schlund/pfixxml/config/impl/ConditionRule.java: resolve
+	to the authconstraint condition instead of the authconstraint itself
+
 2008-05-21  Martin Leidig  <mleidig@schlund.de>
 
 	Added support for authconstraint reusage. Now it's possible to
